--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,11 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./images/film-ga1afc05f1_1280.jpg);
+  background-image: url(./images/movie-seat-hall.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 code {
@@ -34,9 +36,20 @@ li {
 
 p {
   margin: 0;
+  color: #fff;
+}
+
+h3 {
+  color: #fff;
 }
 
 .wrapper {
-  max-width: 800px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1560px !important;
+  max-width: 98% !important;
+}
+
+a {
+  text-decoration: none;
 }
