--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./images/movie-seat-hall.jpg);
+  background-image: url(./images/movie-hall-interior.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
