--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+  padding-top: 65px;
 }
 
 code {
